# Coingate

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
api/: Cargo.toml
api/src/: error.rs  idem.rs  main.rs
api/src/routes/: merchant.rs  mod.rs  payment.rs  wallet.rs  withdraw.rs
chaos/results/: before-after.md  summary.md  sweep-main.jsonl  sweep-pre-idempotency.jsonl
chaos_hooks/: Cargo.toml  README.md
chaos_hooks/src/: lib.rs
docs/: DESIGN.md  LIFECYCLE.md  x-thread.md
docs/specs/: kickoff-amendment-1.md  kickoff-brief.md  phase0-spec.md  phase1-spec.md  phase2-spec.md
harness/: Cargo.toml
harness/src/: beforeafter.rs  enumerate.rs  fixtures.rs  lib.rs  main.rs  oracles.rs  report.rs  schedules.rs  supervisor.rs  workload.rs
idempotency/: Cargo.toml
idempotency/src/: decision.rs  key.rs  lib.rs  lifecycle.rs  store.rs
mock-mpc/: Cargo.toml
mock-mpc/src/: main.rs
poller/: Cargo.toml
poller/src/: main.rs
processor/: Cargo.toml
processor/src/: main.rs
reconciler/: Cargo.toml
reconciler/src/: main.rs
relay/: Cargo.toml
relay/src/: main.rs
store/: Cargo.toml  diesel.toml
store/migrations/2025-09-23-120231_api_schema/: down.sql  up.sql
store/migrations/2025-09-23-171556_deposits_schema/: down.sql  up.sql
store/migrations/2025-09-24-225442_orders/: down.sql  up.sql
store/migrations/2025-09-25-050010_noneable_orders/: down.sql  up.sql
store/migrations/2025-09-27-132859_deposits/: down.sql  up.sql
store/migrations/2025-09-27-161000_balance_and_withdrawals/: down.sql  up.sql
store/migrations/2026-06-18-000000_phase0_baseline/: down.sql  up.sql
store/src/: config.rs  error.rs  idempotency_pg.rs  lib.rs  module.rs  money.rs  pool.rs  reconcile.rs  schema.rs  store.rs
store/src/models/: api.rs
worker/: Cargo.toml
worker/src/: main.rs
