[package]
name = "idempotency"
version = "0.1.0"
edition = "2024"

# Sans-IO crate (Phase 1 spec §3). It is the analogue of the TCP server's frozen `core`:
# given facts it returns decisions, and NO I/O type ever appears in it. The dependency set is
# the line a reviewer checks first — there is deliberately NO diesel / redis / actix / solana
# here. If this crate compiles without a database, the boundary is real.
[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
thiserror = "2"
