[package]
name = "poller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
solana-client = "2.3"
solana-sdk = "2.3"
solana-transaction-status = "2.3"
store = { path = "../store" } # link your store crate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
