[package]
name = "poller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
store = { path = "../store" } # link your store crate
external = { path = "../external" } # Chain trait + SolanaChain
redis = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
