[package]
name = "reconciler"
version = "0.1.0"
edition = "2024"

[dependencies]
store = { path = "../store" }                 # Config, pool, reconcile()

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
