[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"


diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json","numeric"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"
bcrypt = "0.17.1"
thiserror = "2"