[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "0.24"
store = { path = "../store" } # link your store crate

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.17.0", features = ["serde",  "v4"]}
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }