[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "0.24"
store = { path = "../store" } # link your store crate
external = { path = "../external" } # Signer trait + MpcSigner
chaos_hooks = { path = "../chaos_hooks" } # crash-point fire-sites (compile out by default)

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.17.0", features = ["serde",  "v4"]}
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Crash-point fire-sites compile to nothing unless enabled (Amendment §A1).
# Build per-crate: `cargo build -p worker --features chaos`.
chaos = ["chaos_hooks/chaos"]
